[package]
name = "atari-bundle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
log = "0.4"
serde = { version="1.0", features=["derive"] }
serde_ini = "0.2"
serde_with = "1"
strum = { version ="0.22", features=["derive"] }
thiserror = "1.0"
zip = "0.5"
